<resources>
    <string name="app_name">Jaipur Tourism </string>
    <string name="Hotel">Hotels</string>
    <string name="Tourist_Spots">Tourist Spots</string>
    <string name="Restaurant">Restaurants</string>
    <string name="ShoppingDistrict">Shopping District</string>
    <string name="Transport">Transport Services</string>
    <string name="Emergency">Emergency Services</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="menu_home">Home</string>
    <string name="SampleDescription">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaacnklafvbjvfblkbfvblkbfkvfba;kfkvbfkbfkj flkbvb ;vnkjbonfbaf laalnkdnlnslkbvdflsdbkbvkjhbk vdskbdlsbsdbkjbj</string>
    <string name="SampleName">ABC PALACE</string>
    <string name="ITC_hotel">ITC Rajputana</string>
    <string name="ITC_short_desc">a Luxury Collection Hotel</string>
    <string name="ITC_contact">+91 141 405 1600</string>
    <string name="ITC_address">Palace Road, Jaipur 302006 India</string>
    <string name="ITC_desc">With one of the world most unique and celebrated addresses, ITC Rajputana, a Luxury Collection Hotel in Jaipur offers a spectacular setting near the city center lends itself to rich and memorable travel experiences.</string>
    <string name="Marriott_hotel">Jaipur Marriott Hotel</string>
    <string name="Marriott_short_desc">An ideal resting place in the heart of Jaipur</string>
    <string name="Marriott_contact">+91 141 456 7777</string>
    <string name="Marriott_address">Ashram Marg, Near Jawahar Circle, Rajasthan Jaipur, India 302015</string>
    <string name="Marriott_desc">Explore the famous Golden Triangle tourist circuit of India from Jaipur Marriott Hotel, located near the business district of the Pink City, the City Palace, Hawa Mahal, Polo Victory, Diggi Palace, famous bazaars and the Jaipur International Airport.</string>
    <string name="Le_Méridien_hotel">Le Méridien Jaipur Resort Spa</string>
    <string name="Le_Méridien_short_desc">Luxurious private Villa with wooden flooring and attached private garden, traditional regal design, four poster bed and a sunken bathtub with a natural view</string>
    <string name="Le_Méridien_contact">+91 1426 403 333</string>
    <string name="Le_Méridien_address">Number 1, RIICO, Kukas Jaipur, India 302028</string>
    <string name="Le_Méridien_desc">Located in Kukas, Le Méridien Jaipur Resort Spa is well placed in a peaceful, scenic setting. This luxury hotel is located near Nahargarh Fort, Amer Fort, Jal Mahal and the shops of Bapu and Johari Bazaar.</string>
    <string name="FourPoints_hotel">Four Points</string>
    <string name="FourPoints_short_desc">Admire the resplendent view of the city from the top floor and rejuvenate yourself in our luxuriously comfortable suite room.</string>
    <string name="FourPoints_contact">+91 141 710 4600</string>
    <string name="FourPoints_address">City Square, Vasundhara Colony, Tonk Road Jaipur, India 302018 </string>
    <string name="FourPoints_desc">Four Points by Sheraton Jaipur, City Square is set in the center of the city. The hotel is 10 minutes from the Jaipur International Airport (JAI) and 5 minutes away from Gandhi Nagar Railway Station situated at Tonk Road.</string>
    <string name="Jantar_Mantar_spot">Jantar_Mantar</string>
    <string name="Jantar_Mantar_short_desc">a special collection of astronomical tools</string>
    <string name="Jantar_Mantar_contact"> http://www.jantarmantar.org/</string>
    <string name="Jantar_Mantar_address">Gangori Bazaar, J.D.A. Market, Pink City, Jaipur</string>
    <string name="Jantar_Mantar_desc">At first glance, Jantar Mantar may look to be nothing more than a bunch of larger-than-life abstract sculptures. But this is not an art gallery—its a special collection of astronomical tools started by Rajput ruler Jai Singh II to measure the heavens nearly 300 years ago. Each of the 20 or so structures at the UNESCO World Heritage Site serves a distinctive purpose. The observatory massive sun dial, known as Samrat Yantra, is particularly striking. At 27 meters tall, it casts a huge shadow that accurately measures time down to two seconds</string>
    <string name="Hawa_Mahal_spot">Hawa Mahal</string>
    <string name="Hawa_Mahal_short_desc">Palace of Breeze</string>
    <string name="Hawa_Mahal_contact"> https://www.hawa-mahal.com/</string>
    <string name="Hawa_Mahal_address">Hawa Mahal Rd., Badi Choupad, J.D.A. Market, Pink City, Jaipur</string>
    <string name="Hawa_Mahal_desc">If you had any preconceived notions about how the buildings in Jaipur look, they probably came from Hawa Mahal (Palace of Breeze). It has all of the distinctive architectural features that appear in postcards of the city, from the salmon-pink, honeycombed facade, built to resemble the crown of Hindu god Krishna, to the geometric accents and rows of tiny windows.

The landmark was built in 1799 to allow royal ladies to watch festivals on the street without being seen by the public. Its 953 windows allow plenty of breeze to pass through, making it an ideal summer palace.</string>
    <string name="Amber_Fort_spot"></string>
    <string name="Amber_Fort_short_desc"></string>
    <string name="Amber_Fort_contact"></string>
    <string name="Amber_Fort_address"></string>
    <string name="Amber_Fort_desc">Jaipur is home to one of India\' most-visited forts: Amber Fort. Built in the year 1592, the sandstone and marble monolith stands atop a small hill roughly 20 minute driving distance northeast of the center of Jaipur. Its best known for being a pristine example of Rajasthani architecture.
Getting to Amber Fort typically involves a short uphill hike that\'s well worth the effort. Its decked out with intricate patterns of inlaid marble in nearly every color of the rainbow. The fort is laid out into four separate sections, each of which has a spectacular garden courtyard outside. While you\'d never know it from above, you can actually explore the fort\'s underground tunnels, some of which have been restored.</string>
    <string name="Birla_Mandir_spot">Birla Mandir</string>
    <string name="Birla_Mandir_short_desc">Modern, domed Hindu temple built of white marble, with stained glass, intricate carvings, a museum. </string>
    <string name="Birla_Mandir_contact">+91-141-2620969</string>
    <string name="Birla_Mandir_address">Jawahar Lal Nehru Marg, Tilak Nagar, Jaipur, Rajasthan 302022</string>
    <string name="Birla_Mandir_desc">In a city that seems to be dipped from top to bottom in pink, the stark white marble Birla Mandir stands out—big time. The Hindu temple pays tribute to Lakshmi, the goddess of wealth and purity, and Vishnu, one of the religion\'s main deities.

The marvelous structure exudes a quiet, peaceful vibe, offering just the right atmosphere to appreciate fine marble carvings, shrines to gods, and gorgeous sunset views. While you don\'t need more than 30 minutes to get a sense of the space, the experience will prove to be a restorative break from a day of sightseeing.</string>
    <string name="Galta_Ji_spot">Galta Ji</string>
    <string name="Galta_Ji_short_desc">Regarded as a highly sacred pilgrimage with great historical significance</string>
    <string name="Galta_Ji_contact">0141 2680 951</string>
    <string name="Galta_Ji_address">Shri Galta Peetham, Galva Ashrama, Jaipur, Rajasthan, 302013</string>
    <string name="Galta_Ji_desc">Sources of water can be few and far between in the desert state of Rajasthan. So it\'s no wonder that when people discovered a natural spring in a mountain pass in the Aravalli Hills, they honored it by building the Hindu temple Galta Ji. Nestled between cliffs, the temple features a few sacred water tanks, some with modest fountains, as well as frescoes that tell tales about Hindu god Krishna.

While the official name for this place is Galta Ji, it\'s better known as the Monkey Temple for the hundreds of macaques and langurs that live here. Daring tourists might opt to buy a handful of peanuts at the gate to tempt the monkeys, but you\'re better off just watching the rambunctious creatures from a distance.</string>
    <string name="Jal_Mahal_spot">Jal Mahal</string>
    <string name="Jal_Mahal_short_desc">a palace in the middle of the Man Sagar Lake</string>
    <string name="Jal_Mahal_contact">141-2673337</string>
    <string name="Jal_Mahal_address">Amer Rd, Jal Mahal, Amer, Jaipur, Rajasthan 302002</string>
    <string name="Jal_Mahal_desc">One look at the Jal Mahal, and you might think you\'re seeing a mirage. The graceful palace seems to float atop the twinkling Man Sagar Lake—a calm sight compared to the rest of the frenzied city.

While it appears to have just one story, the Water Palace has four other levels submerged beneath a reservoir. Tourists can\'t access the site, however, that may change in the future. Rumor has it that entrepreneurs want to convert the decaying space into a luxe restaurant.</string>
    <string name="Jaipur_Adda_rest">Jaipur Adda</string>
    <string name="Jaipur_Adda_short_desc">Modern Indian</string>
    <string name="Jaipur_Adda_contact">http://www.jaipuradda.com/</string>
    <string name="Jaipur_Adda_address"> 8/9, Station Road, Kanti Nagar, Sindhi Camp, Jaipur, Rajasthan 302016</string>
    <string name="Jaipur_Adda_desc">Jaipur Adda is among the many famous restaurants in Jaipur that allow you to feel the wind in your hair while you devour mouth-watering food. But what sets this place apart is its cheery interiors, magnificent wall art and fine wood furniture that adds a royal feel to the whole experience.</string>
    <string name="The_Rajput_Room_rest">The Rajput Room</string>
    <string name="The_Rajput_Room_short_desc">North Indian, Continental, Asian</string>
    <string name="The_Rajput_Room_contact">https://taj.tajhotels.com/en-in/taj-rambagh-palace-jaipur/restaurants/the-rajput-room-restaurant/</string>
    <string name="The_Rajput_Room_address">Rambagh Palace, Bhawani Singh Road, Rambagh, Jaipur, Rajasthan 302005</string>
    <string name="The_Rajput_Room_desc">Just like Rajasthan without royalty is incomplete, without The Rajput Room the list of best restaurants in Jaipur is lacking. When visiting the numerous tourist places in Jaipur, don\’t forget to delight your taste buds with the appetizing selection of Asian and Continental dishes served in this Rambagh Palace restaurant, Jaipur that help unwinding from the stress of everyday drudgery.</string>
    <string name="Zolocrust_rest">Zolocrust</string>
    <string name="Zolocrust_short_desc">Italian, Bakery, Continental</string>
    <string name="Zolocrust_contact">http://www.zolocrust.com/</string>
    <string name="Zolocrust_address">Hotel Clarks Amer,, Jawahar Lal Nehru Marg, Jaipur, Rajasthan 302017</string>
    <string name="Zolocrust_desc">This 24/7 restaurant allows the diners to interact with the finest chefs cooking their meals. The organically grown vegetables impart that unique flavor to the dish that is often missing in the chemically produced food that has taken over our lives today. Added to that, the use of unconventional crockery that is disposable and environment friendly makes this undeniably one of the famous restaurants in Jaipur.</string>
    <string name="RJ14_rest">RJ 14</string>
    <string name="RJ14_short_desc">North Indian, South Indian</string>
    <string name="RJ14_contact">098871 25555</string>
    <string name="RJ14_address">Plot No 132, 133, 151, Ajmer Road, Opposite IndusInd Bank, Ajmera Garden, DCM, Jaipur, Rajasthan 302019</string>
</resources>