<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        card_view:cardCornerRadius="14dp"
       >

    <TextView
        style="@style/Headings"
        android:layout_width="match_parent"
        android:layout_height="84dp"
        android:text="@string/Hotel"
        android:gravity="center"
        android:id="@+id/category_Hotel"
        android:onClick="openHotelActivity"
        />
    </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_gravity="center"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            card_view:cardCornerRadius="14dp"

            >

            <TextView
                style="@style/Headings"
                android:layout_width="match_parent"
                android:layout_height="84dp"
                android:text="@string/Tourist_Spots"
                android:gravity="center"
                android:id="@+id/category_Spots"
                android:onClick="openSpotActivity"
                />
        </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        card_view:cardCornerRadius="14dp"
       >

    <TextView
        style="@style/Headings"
        android:layout_width="match_parent"
        android:layout_height="84dp"
        android:text="@string/Restaurant"
        android:gravity="center"
        android:onClick="openRestaurantActivity"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        card_view:cardCornerRadius="14dp"
        >
    <TextView
        style="@style/Headings"
        android:layout_width="match_parent"
        android:layout_height="84dp"
        android:text="@string/ShoppingDistrict"
        android:gravity="center"

        android:onClick="openShoppingActivity"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        card_view:cardCornerRadius="14dp"
        >
    <TextView
        style="@style/Headings"
        android:layout_width="match_parent"
        android:layout_height="84dp"
        android:text="@string/Transport"
        android:gravity="center"
        android:onClick="openTransportActivity"/>
    </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>
